# wrcq

./: .gitignore  Cargo.toml  Makefile  README.md  bower.json  dabin.js  db.js  flake.nix  helpers.js  importer.js  index.js  model.js  package-lock.json  package.json  results.xml  results.xsd  resultsbroumy.xml  web.js  web.tjs
content/: config.toml  councillors.toml  users.toml
content/events/: arc2012.toml  arc2013.toml  arc2014.toml  arc2015.toml  arc2016.toml  arc2017.toml  arc2018.toml  arc2019.toml  arc2021.toml  arc2022.toml  arc2023.toml  arc2024.toml  aurc2017.toml  aurc2023.toml  (+90 more)
db/: index.js
result/: arc2012.xml  arc2013.xml  arc2014.ssv  arc2015.csv  arc2016.ssv  arc2017.csv  arc2018.csv  arc2019.csv  arc2021.csv  arc2023.csv  arc2024.csv  aurc2017.csv  aurc2023.csv  crc2012.xml  crc2013.xml  crc2014.xml  crc2016.ssv  crc2017.xml  crc2018.xml  czrc2019.xml  czrc2020.xml  czrc2021.csv  czrc2023.csv  czrc2024.xml  erc2012.xml  erc2013.xml  erc2014.ssv  erc2015.xml  erc2016.ssv  erc2017.csv  erc2018.csv  erc2020.xml  erc2021.csv  erc2023.csv  erc2024.csv  frc2012.xml  frc2013.xml  frc2014.ssv  frc2015.xml  frc2017.csv  (+64 more)
route/: events.js  updates.js
scripts/: aurc2023.jq  categories.jq  dom.jq  erc2024.jq  html2json.py  json2csv.py  lvrc2022.jq  lvrc2024.jq  rogain-manager.py  rogaine-results.py  utils.jq
src/: assets.rs  config.rs  events.rs  lib.rs  main.rs  template.rs  toml_datetime_parser.rs  updates.rs
view/: events.hbs  events_add.hbs  events_upload.hbs  index.hbs  layout.hbs  login.hbs  qualified.hbs  results.hbs  updates_archive.hbs
(+54 files in other folders)
