[package]
name = "wrcq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = [
    "alloc",
    "now",
    "serde",
] }
csv = "1.4.0"
derive-where = "1.6.1"
env_logger = "0.11.10"
fs_extra = "1.3.0"
handlebars = "6.4.1"
konst = { version = "0.4.3", default-features = false, features = ["iter"] }
log = "0.4.32"
quick-xml = { version = "0.40.1", features = ["serde-types", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
serde_variant = "0.1.3"
toml = "1.1.2"
unaccent = "0.1.1"
url = { version = "2.5.8", features = ["serde"] }
